--- a/28/birthplace.html
+++ b/28/birthplace.html
@@ -23,9 +23,9 @@
 			<div class="main-content2">
 				<h3>出身地</h3>
 				<ul>
-					<li>出身地：福岡</li>
-					<li>博多どんたく港まつり</li>
-					<li>博多祇園山笠</li>
+					<li>出身地：福岡県 福岡市</li>
+					<li>◎ 博多どんたく港まつり</li>
+					<li>◎ 博多祇園山笠</li>
 				</ul>
 				<img src="https://th.bing.com/th/id/OIP.5G96LgSquvEAyHGt0j6ubwHaFn?w=233&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="どんたくの画像">
 				<img src="https://th.bing.com/th/id/OIP.vijBaPvGK61oertepcU3FgHaEk?w=292&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" alt="山笠の画像">
