--- a/28/anime.html
+++ b/28/anime.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 	<head>
-		<!DOCTYPE html>
-		<html lang="ja">
-		<head>
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Document</title>
-			<link rel="stylesheet" href="style.css">
-		</head>
-		<body>
-			<nav>
-                <ul>
-                    <li><a href="home.html">ホーム</a></li>
-                    <li><a href="birthplace.html">出身地</a></li>
-					<li><a href="anime.html">アニメ</a></li>
-                    <li><a href="movie.html">映画</a></li>
-                    <li><a href="hobby.html">趣味</a></li>
-                    <li><a href="disney.html">ディズニー</a></li>
-                </ul>
-            </nav>
-			<div id="top-content">
-				<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG_aldafvmAI3H0quSq6PANmetr98dwjet7wYvBgz4TGhpACvAFVoStln0E__vqSWzIKlMwFN0x29HaUxvhumop0ggfheT3VZvQQXUlSp7Xon1vncxwYNBDoSNIb2BbTOdrZfuiCOEp12r19ytCF2ScobKbyhoosyYje5mG-Ucwzakvsg_7x9sbsHgkqusi9OgQ==/mainvisual.png?errorImage=false" alt="画像">
-				<div class="main-content">
-				<h3>好きなアニメ</h3>
-					<ul>
-						<li>ちはやふる</li>
-					</ul>
-				</div>
-			</div>
-		</body>
-		</html>
-		<title></title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>好きなアニメ</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<nav>
+			<ul>
+				<li><a href="home.html">ホーム</a></li>
+				<li><a href="birthplace.html">出身地</a></li>
+				<li><a href="anime.html">アニメ</a></li>
+				<li><a href="movie.html">映画</a></li>
+				<li><a href="hobby.html">趣味</a></li>
+				<li><a href="disney.html">ディズニー</a></li>
+			</ul>
+		</nav>
+		<div id="top-content">
+			<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG_aldafvmAI3H0quSq6PANmetr98dwjet7wYvBgz4TGhpACvAFVoStln0E__vqSWzIKlMwFN0x29HaUxvhumop0ggfheT3VZvQQXUlSp7Xon1vncxwYNBDoSNIb2BbTOdrZfuiCOEp12r19ytCF2ScobKbyhoosyYje5mG-Ucwzakvsg_7x9sbsHgkqusi9OgQ==/mainvisual.png?errorImage=false" alt="画像">
+			<div class="main-content">
+				<h3>好きなアニメ</h3>
+				<ul>
+					<li>ちはやふる</li>
+				</ul>
+			</div>
+		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
 	</body>
 </html>
