--- a/28/movie.html
+++ b/28/movie.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 	<head>
-		<!DOCTYPE html>
-		<html lang="ja">
-		<head>
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Document</title>
-			<link rel="stylesheet" href="style.css">
-		</head>
-		<body>
-			<nav>
-                <ul>
-                    <li><a href="home.html">ホーム</a></li>
-                    <li><a href="birthplace.html">出身地</a></li>
-					<li><a href="anime.html">アニメ</a></li>
-                    <li><a href="movie.html">映画</a></li>
-                    <li><a href="hobby.html">趣味</a></li>
-                    <li><a href="disney.html">ディズニー</a></li>
-                </ul>
-            </nav>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>好きな映画</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="home.html">ホーム</a></li>
+				<li><a href="birthplace.html">出身地</a></li>
+				<li><a href="anime.html">アニメ</a></li>
+				<li><a href="movie.html">映画</a></li>
+				<li><a href="hobby.html">趣味</a></li>
+				<li><a href="disney.html">ディズニー</a></li>
+			</ul>
+		</nav>
 			<div id="top-content">
 				<img src="https://doraeiga.com/2013/sp/img/main5.jpg" alt="画像">
 				<div class="main-content">
-				<h3>好きな映画</h3>
+					<h3>好きな映画</h3>
 					<ul>
 						<li>映画ドラえもん のび太のひみつ道具博物館</li>
 					</ul>
 				</div>
 			</div>
-		</body>
-		</html>
-		<title></title>
-	</head>
-	<body>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
 	</body>
 </html>
