--- a/28/anime.html
+++ b/28/anime.html
@@ -20,9 +20,9 @@
 		<div id="top-content">
 			<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG_aldafvmAI3H0quSq6PANmetr98dwjet7wYvBgz4TGhpACvAFVoStln0E__vqSWzIKlMwFN0x29HaUxvhumop0ggfheT3VZvQQXUlSp7Xon1vncxwYNBDoSNIb2BbTOdrZfuiCOEp12r19ytCF2ScobKbyhoosyYje5mG-Ucwzakvsg_7x9sbsHgkqusi9OgQ==/mainvisual.png?errorImage=false" alt="画像">
 			<div class="main-content">
-				<h3>好きなアニメ</h3>
+				<h3>✦·.⋆ 好きなアニメ ⋆.·✦</h3>
 				<ul>
-					<li>ちはやふる</li>
+					<li><strong>ちはやふる</strong></li>
 				</ul>
 			</div>
 		</div>
