--- a/28/birthplace.html
+++ b/28/birthplace.html
@@ -18,9 +18,9 @@
             </ul>
         </nav>
 		<div class="main-content2">
-			<h3>出身地</h3>
+			<h3>✦·. ⋆出身地 ⋆.·✦</h3>
 			<ul>
-				<li>出身地：福岡県 福岡市</li>
+				<li><strong>出身地：福岡県 福岡市</strong></li>
 				<li>◎ 博多どんたく港まつり</li>
 				<li>◎ 博多祇園山笠</li>
 			</ul>
