--- a/28/disney.html
+++ b/28/disney.html
@@ -18,7 +18,7 @@
 			</ul>
 		</nav>
 		<div class="main-content2">
-			<h3>🏰ディズニー💙</h3>
+			<h3>✦·.⋆ ディズニー ⋆.·✦</h3>
 			<img src="image/disney1.jpeg" alt="画像1">
 			<img src="image/disney2.jpeg" alt="画像2">
 			<img src="image/disney3.jpeg" alt="画像3">
