--- a/28/hobby.html
+++ b/28/hobby.html
@@ -18,7 +18,8 @@
 		</ul>
 		</nav>
 			<div class="main-content2">
-				<h3>✈ 趣味:旅行</h3>
+				<h3>✦·.⋆ 趣味 ⋆.·✦</h3>
+				<p>趣味は<u><strong> 旅行 </strong></u>に行くことです♩</p>
 				<img src="image/hobby1.jpeg" alt="画像1">
 				<img src="image/hobby2.jpeg" alt="画像2">
 			</div>
