--- a/28/movie.html
+++ b/28/movie.html
@@ -20,9 +20,9 @@
 			<div id="top-content">
 				<img src="https://doraeiga.com/2013/sp/img/main5.jpg" alt="画像">
 				<div class="main-content">
-					<h3>好きな映画</h3>
+					<h3>✦·.⋆ 好きな映画 ⋆.·✦</h3>
 					<ul>
-						<li>映画ドラえもん のび太のひみつ道具博物館</li>
+						<li><strong>映画ドラえもん のび太のひみつ道具博物館</strong></li>
 					</ul>
 				</div>
 			</div>
