--- a/28/home.html
+++ b/28/home.html
@@ -20,9 +20,9 @@
 		<div id="top-content">
 			<img src="https://toy.bandai.co.jp/assets/tamagotchi/images/smart/character/30/character.png" alt="画像">
 			<div class="main-content">
-				<h3>♩ 自己紹介</h3>
+				<h3>✦·.⋆ 自己紹介 ⋆.·✦</h3>
 					<ul>
-						<li>副島 明日香</li>
+						<li><strong>副島 明日香</strong></li>
 						<li>麻生情報ビジネス専門学校</li>
 						<li>情報システム専攻科</li>
 					</ul>
