--- a/28/disney.html
+++ b/28/disney.html
@@ -17,12 +17,35 @@
 				<li><a href="disney.html">ディズニー</a></li>
 			</ul>
 		</nav>
-		<div class="main-content2">
-			<h3>✦·.⋆ ディズニー ⋆.·✦</h3>
-			<img src="image/disney1.jpeg" alt="画像1">
-			<img src="image/disney2.jpeg" alt="画像2">
-			<img src="image/disney3.jpeg" alt="画像3">
+		<div class="main-content3">
+			<div class="img-top">
+				<img src="image/disney1.jpeg" alt="画像1">
+				<p>
+					📍Arabian Coast
+				</p>
+				<p>
+					アラジンに出てくる<br>ラジャーのオブジェ🐯
+				</p>
+			</div>
+			<div class="img-top">
+				<img src="image/disney2.jpeg" alt="画像2">
+				<p>
+					📍Disneyland Hotel
+				</p>
+				<p>
+					ダッフィー＆フレンズの<br>ぬいぐるみと📸
+				</p>
+			</div>
+			<div class="img-top">
+				<img src="image/disney3.jpeg" alt="画像3">
+				<p>
+					📍Disneyland<br>
+				</p>
+				<p>
+					ディズニーランドの入り口！<br>🍩パルパルーザ仕様🍩
+				</p>
+			</div>
 		</div>
-	<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
+		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
 	</body>
 </html>
