--- a/28/disney.html
+++ b/28/disney.html
@@ -17,33 +17,37 @@
 				<li><a href="disney.html">ディズニー</a></li>
 			</ul>
 		</nav>
-		<div class="main-content3">
-			<div class="img-top">
-				<img src="image/disney1.jpeg" alt="画像1">
-				<p>
-					📍Arabian Coast
-				</p>
-				<p>
-					アラジンに出てくる<br>ラジャーのオブジェ🐯
-				</p>
-			</div>
-			<div class="img-top">
-				<img src="image/disney2.jpeg" alt="画像2">
-				<p>
-					📍Disneyland Hotel
-				</p>
-				<p>
-					ダッフィー＆フレンズの<br>ぬいぐるみと📸
-				</p>
-			</div>
-			<div class="img-top">
-				<img src="image/disney3.jpeg" alt="画像3">
-				<p>
-					📍Disneyland<br>
-				</p>
-				<p>
-					ディズニーランドの入り口！<br>🍩パルパルーザ仕様🍩
-				</p>
+		<div class="home-div">
+			<h1>Disney</h1>
+			<p>ディズニーで撮ったお気に入りの写真です☆彡</p>
+			<div class="main-content3">
+				<div class="img-top">
+					<img src="image/disney1.jpeg" alt="画像1">
+					<p>
+						📍Arabian Coast
+					</p>
+					<p>
+						アラジンに出てくる<br>ラジャーのオブジェ🐯
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/disney2.jpeg" alt="画像2">
+					<p>
+						📍Disneyland Hotel
+					</p>
+					<p>
+						ダッフィー＆フレンズの<br>ぬいぐるみと📸
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/disney3.jpeg" alt="画像3">
+					<p>
+						📍Disneyland<br>
+					</p>
+					<p>
+						ディズニーランドの入り口！<br>🍩パルパルーザ仕様🍩
+					</p>
+				</div>
 			</div>
 		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
