--- a/28/anime.html
+++ b/28/anime.html
@@ -17,13 +17,38 @@
 				<li><a href="disney.html">ディズニー</a></li>
 			</ul>
 		</nav>
-		<div id="top-content">
-			<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG_aldafvmAI3H0quSq6PANmetr98dwjet7wYvBgz4TGhpACvAFVoStln0E__vqSWzIKlMwFN0x29HaUxvhumop0ggfheT3VZvQQXUlSp7Xon1vncxwYNBDoSNIb2BbTOdrZfuiCOEp12r19ytCF2ScobKbyhoosyYje5mG-Ucwzakvsg_7x9sbsHgkqusi9OgQ==/mainvisual.png?errorImage=false" alt="画像">
-			<div class="main-content">
-				<h3>✦·.⋆ 好きなアニメ ⋆.·✦</h3>
-				<ul>
-					<li><strong>ちはやふる</strong></li>
-				</ul>
+		<div class="home-div">
+			<h1>anime</h1>
+			<div class="main-content3">
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqGzsxBwiJiVraNgd7o60HjQ0U--QsAW30mI5rP5iK9g9X6L8h7eC3PRvFC_0LCS2PNDIiJuzNbBwoTxpXGzDoKpxSMEIMAadrah0V60VcgtJYAv1elWu70eOyEUiSh5JrHUaVyPM2oMOzO7OqapMlEaDov1da84_BJ8FH5yPjHlreA1aBYY4hXU3cSyrmhHwfSsc2MgDiDGCEH2GF1qVmb31tYDReT54DN-TDTz1V-abEr5LCuNhLp-gRA5LcuMBdtW6IfhZILAjIfS92j-GI_nk=/20240405_195803_p_o_53590288.jpg?errorImage=false" width="225px" height="320px" alt="ハイキュー!!の画像">
+					<p>
+						<u>ハイキュー!!</u>
+					</p>
+					<p>
+						毎年７月１日~１５日に行われる<br>伝統的な博多のお祭り
+
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG3XSu5pEMv3phGdske0_FZsMvsPooS970gyuivM2Z2HWp1xKVJH9dO4PsttyfrvKuDNG22QJRnu4nEPsu2BfRMuoEhzsiTAnIuzNPpT0905TX86AvgCRRnhXSyBgVULW9AXdX58w6wm2HwV5kko1N3JgAlH_PDUXHabG4Fc3KDP8adFIEVAh1tI001wnLMkFFPSDGJxto2pblUhefVK6fLFkcxAk9NqmNMsYuSX-SL0QliELnqMSDT1bydPVJRafLz-LLJQLWD8XOytxSfAs2cE=/9784088467566.jpg?errorImage=false" width="225px" height="320px" alt="俺物語!!の画像">
+					<p>
+						<u>俺物語!!</u>
+					</p>
+					<p>
+						毎年７月１日~１５日に行われる<br>伝統的な博多のお祭り
+
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqGwj6x2kjGXW2Vr2CufpIcoJAY7AB0-ZjPxi7Xye_xu0wm9U4TgWke3wHS2oRWPNFsjbW0l0IlYOKuT-C7qMrYJrszzCbZENTza-YgU3U-_hF0nsg1QZMdv4Le95CXm0K4yVrhahWOMegWk4MUO084DBoyNG0ArBy0C47Wvxv61iQgYgQTdywx24hSiRyeMm0GYQjDAEU9dFwdhpU-9-jQ5A=/61MZGL5b-sL.jpg?errorImage=false" width="225px" height="320px" alt="ちはやふるの画像">
+					<p>
+						<u>ちはやふる</u>
+					</p>
+					<p>
+						毎年５月２~４日に行われる<br>伝統的な博多のお祭り
+					</p>
+				</div>
 			</div>
 		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
