--- a/28/home.html
+++ b/28/home.html
@@ -12,20 +12,21 @@
                 <li><a href="home.html">ホーム</a></li>
                 <li><a href="birthplace.html">出身地</a></li>
 				<li><a href="anime.html">アニメ</a></li>
-                <li><a href="movie.html">映画</a></li>
+				<li><a href="movie.html">映画</a></li>
                 <li><a href="hobby.html">趣味</a></li>
-				<li><a href="disney.html">ディズニー</a></li>
+                <li><a href="disney.html">ディズニー</a></li>
             </ul>
         </nav>
 		<div id="top-content">
-			<img src="https://toy.bandai.co.jp/assets/tamagotchi/images/smart/character/30/character.png" alt="画像">
+			<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqGwfKBdUkqXx0tofkDFCVzfJFo6Y-B3b9fB_rxPz--FpnIsitW050UgTCyb2U2OOKflRoj7ZyV2d7InUNtWpTSIeAJ2ILSFAaHWgUDJ-bh7YF9nAnDQbuHv3aY4jsl5kzCcwXBiQZlQd8vO0AQEd1LICdk365kswphvnei1caAzeA-ZnjN4qokgziVDnIvm3QKw10NoPr49RFuZxL6iDmLdJNC7uPG3LXyoQYcCukff8Ez7a15iaHuv-NaipEk6kmUzqHAsdyTCAkwMSNHCxCDq6tBX6e9SeXS8-wT85HTAJ_/main.png?errorImage=false" alt="画像">
 			<div class="main-content">
 				<h3>✦·.⋆ Profile ⋆.·✦</h3>
-					<ul>
-						<li><strong>副島 明日香</strong></li>
-						<li>麻生情報ビジネス専門学校</li>
-						<li>情報システム専攻科</li>
-					</ul>
+				<ul>
+					<li>副島 明日香</li>
+					<li>学校：麻生情報ビジネス専門学校</li>
+					<li>学科：情報システム専攻科</li>
+				</ul>
+				<p>よろしくお願いします(・ω・)ノ</p>
 			</div>
 		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
