--- a/28/birthplace.html
+++ b/28/birthplace.html
@@ -17,36 +17,36 @@
                 <li><a href="disney.html">ディズニー</a></li>
             </ul>
         </nav>
-		<div class="top-content2">
+		<div class="home-div">
 			<h1>Hometown</h1>
-			<p>福岡県 福岡市</p>
+			<p>生まれも育ちも 福岡県 福岡市 です！</p>
 			<div class="main-content3">
 				<div class="img-top">
 					<img src="https://www.dontaku.fukunet.or.jp/photo_item/cc12039a-c271-4850-958d-e6b1be345e7c/77cc0568ddf6fc0aeb6add03fc784f51.jpg" width="120px" height="180px" alt="画像1">
-					<p>
-						<u>博多どんたく港まつり</u>
+					<p class="color-title">
+						<strong>博多どんたく港まつり</strong>
 					</p>
 					<p>
-						毎年５月２~４日に行われる<br>伝統的な博多のお祭り
+						毎年5月2~4日に行われる<br>伝統的な博多のお祭り
 					</p>
 				</div>
 				<div class="img-top">
 					<img src="https://www.hakatayamakasa.com/blog_header.jpg" width="120px" height="180px" alt="画像2">
-					<p>
-						<u>博多祇園山笠</u>
+					<p class="color-title">
+						<strong>博多祇園山笠</strong>
 					</p>
 					<p>
-						毎年７月１日~１５日に行われる<br>伝統的な博多のお祭り
+						毎年7月1日~15日に行われる<br>伝統的な博多のお祭り
 
 					</p>
 				</div>
 				<div class="img-top">
 					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG-XhdidXIiISM57Uf-d4-ZDlO8ymbGpTPlQCLyOdGql18xPhvOOa8YokQ0h9FkFsJlTOAz8ATQXruRMyqCzlle66bBBe980cKlX5y2J4vvXdC75HVwdet7UkfZd6FPJT9_F6SRVIsJ_NbxYiLv_-eMnl4XYnVyIiEjOe1H_nePmQ5TvMpmxqUz5UAi8jnRqpdfMT4bzjmvGKJENIfRZBbCZUzgM_AE0F67kTMqgs5ZXuumwQXvfNHCpV-ctieL713Qu-R1cHXre1JH2XehTyU_eDZNRaifXhNCs_BugWVA5o/3e54b92cfaba372b5cc5a1d8525d86da.jpg?errorImage=false" width="120px" height="180px" alt="画像3">
-					<p>
-						<u>十日恵比寿 正月大祭</u>
+					<p class="color-title">
+						<strong>十日恵比寿 正月大祭</strong>
 					</p>
 					<p>
-						毎年１月に行われる伝統的なお祭り
+						毎年1月に行われる伝統的なお祭り
 						<br>おみくじも引けて屋台もある！
 					</p>
 				</div>
