--- a/28/disney.html
+++ b/28/disney.html
@@ -23,8 +23,8 @@
 			<div class="main-content3">
 				<div class="img-top">
 					<img src="image/disney1.jpeg" alt="画像1">
-					<p>
-						📍Arabian Coast
+					<p class="color-title">
+						<strong>📍Arabian Coast</strong>
 					</p>
 					<p>
 						アラジンに出てくる<br>ラジャーのオブジェ🐯
@@ -32,8 +32,8 @@
 				</div>
 				<div class="img-top">
 					<img src="image/disney2.jpeg" alt="画像2">
-					<p>
-						📍Disneyland Hotel
+					<p class="color-title">
+						<strong>📍Disneyland Hotel</strong>
 					</p>
 					<p>
 						ダッフィー＆フレンズの<br>ぬいぐるみと📸
@@ -41,11 +41,41 @@
 				</div>
 				<div class="img-top">
 					<img src="image/disney3.jpeg" alt="画像3">
-					<p>
-						📍Disneyland<br>
+					<p class="color-title">
+						<strong>📍Disneyland</strong>
 					</p>
 					<p>
 						ディズニーランドの入り口！<br>🍩パルパルーザ仕様🍩
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/disney4.jpg" alt="画像4">
+					<p class="color-title">
+						<strong>📍Miguel's El Dorado Cantina</strong>
+					</p>
+					<p>
+						ダッフィー＆フレンズのレストラン🍴
+						<br>オル・メル と オル・メル
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/disney5.jpg" alt="画像5">
+					<p class="color-title">
+						<strong>📍Fantasy Springs</strong>
+					</p>
+					<p>
+						ラプンツェルの住む塔✨
+						<br>歌声が聴こえる！！
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/disney6.jpg" alt="画像6">
+					<p class="color-title">
+						<strong>📍Fantasy Springs Hotel</strong>
+					</p>
+					<p>
+						ファンタジースプリングスホテルの近く🌼
+						<br>よく見るとガラスの靴が…！！
 					</p>
 				</div>
 			</div>
