--- a/28/hobby.html
+++ b/28/hobby.html
@@ -17,12 +17,44 @@
 			<li><a href="disney.html">ディズニー</a></li>
 		</ul>
 		</nav>
-			<div class="main-content2">
-				<h3>✦·.⋆ 趣味 ⋆.·✦</h3>
-				<p>趣味は<u><strong> 旅行 </strong></u>に行くことです♩</p>
-				<img src="image/hobby1.jpeg" alt="画像1">
-				<img src="image/hobby2.jpeg" alt="画像2">
+		<div class="home-div">
+			<h1>Hobby</h1>
+			<p>旅行に行くのが好きです</p>
+			<div class="main-content3">
+				<div class="img-top">
+					<img src="image/hobby1.jpeg" alt="画像1">
+					<p class="color-title">
+						<strong>📍Aichi</strong>
+					</p>
+					<p>
+						💙中部電力 MIRAI TOWER
+						<br>地上90mに位置する屋内展望台！
+						<br>名古屋の街を一望することができる
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/hobby2.jpeg" alt="画像2">
+					<p class="color-title">
+						<strong>📍Osaka</strong>
+					</p>
+					<p>
+						🐙 道頓堀 グリコサイン
+						<br>大阪に行ったら一度は行く人気スポット💡
+
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="image/hobby3.jpg" alt="画像3">
+					<p class="color-title">
+						<strong>📍Osaka</strong>
+					</p>
+					<p>
+						💙海遊館🦈
+						<br>ジンベエザメがいるのは、全国で4館だけ！
+					</p>
+				</div>
 			</div>
+		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
 	</body>
 </html>
