--- a/28/movie.html
+++ b/28/movie.html
@@ -17,15 +17,42 @@
 				<li><a href="disney.html">ディズニー</a></li>
 			</ul>
 		</nav>
-			<div id="top-content">
-				<img src="https://doraeiga.com/2013/sp/img/main5.jpg" alt="画像">
-				<div class="main-content">
-					<h3>✦·.⋆ 好きな映画 ⋆.·✦</h3>
-					<ul>
-						<li><strong>映画ドラえもん のび太のひみつ道具博物館</strong></li>
-					</ul>
+		<div class="home-div">
+			<h1>Movie</h1>
+			<p></p>
+			<div class="main-content3">
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG2E-Sg2-7FDTZANwvnBP0L8fCu8JH5BxSVL3lAhv-slsuRAB7FbzjoitSHwn85Z6IVP0hhOKE0WV02xp8COfSD87-BBGSSxSyN_tsGWXWGtDz9iTodpYdZKNfd2eUm7Se46W9FtWIxtpw2fyo1QYq9CE5VCChhsNJVENVLQbFVoj/A1kdPNVzgAL.jpg?errorImage=false" width="170px" height="320px" alt="画像1">
+					<p class="color-title">
+						<strong>新感染 ファイナル・エクスプレス</strong>
+					</p>
+					<p>
+						ゾンビパニック×家族の絆
+						<br>ソウルから釜山行きの列車に乗った人々は、突然発生したゾンビのパンデミックに巻き込まれてしまう…
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqGwk9rXYfgFP0KZ73dpjDmnihQSQro4TAEuO-efKND9S4udB72yjxUemKtZJYI_l2oLO9yvtAPqbsgBYFpCSVUheuF411Fc7TKxE7VEhqpLHiSGP4NBfkXWhAbdXYUhGK1qNNrYy2EemZMbUJilgrU62vCIpknrHp4fguRHnJZ7TXaHHa6LP4vZGz6cjE2NZRkL_nnh5VxSYiLTA3yccDp5iOCh_ui7YUTHnifT801pX_rrh_UHcFHdiOxi534-BrAapSW9mA-CQhBkPVDZPA5_wj6jHN7zkhXcOPvvR2BVImwVdOaFRoWOYA59PkUlsONCoP7frKu2hdqD-rzG8EkmL3GDEK2dLdc5rmfLM6E64r/mv61607_99329abcca92fdc8ddafd4414bb8404016281.jpg?errorImage=false" width="170px" height="320px" alt="画像2">
+					<p class="color-title">
+						<strong>リメンバー・ミー</strong>
+					</p>
+					<p>
+						音楽×家族の絆×死者の世界
+						<br>音楽を愛する少年ミゲルは、家族が音楽を禁じている理由を知らずに音楽家になる夢を追い続けます。ある日、死者の日に魔法のような出来事が起こり、ミゲルは死者の世界に迷い込む…
+					</p>
+				</div>
+				<div class="img-top">
+					<img src="https://msp.c.yimg.jp/images/v2/FUTi93tXq405grZVGgDqG_1uy3hrMhpqdCesejs4UcA1IDFHO5-6ZAjExaSjukJ9mL7nW1tZ4ftDqyUTGwiWg3Fg4G7FXe51c31HNYhEmhwkp9LOdWZ-wpL6UIUiBvHL7I29_qnFs4yjUs4hWxuThrXzQP1DG_zTvBy4Oavg2UFfNDZyXGGxW05kCom-Tob6IM0GpTBp7hu258QBeQ7-kBhB7uAxFOdqhO5IhenwfQ6P0ebds-Dlm6hSkwc2AktEejzQ0NZRTAabZDsWpuE8pcQTEAJJrALsxpO60HOEArE=/9784065212011_w.jpg?errorImage=false" width="170px" height="320px" alt="画像3">
+					<p class="color-title">
+						<strong>アラジン</strong>
+					</p>
+					<p>
+						魔法のランプ×冒険×愛
+						<br>貧しい青年アラジンは、王国の姫ジャスミンに恋をし、魔法のランプで出てきたジーニーの力で王子に変装。しかし邪悪な魔法使いジャファーにその秘密がばれ、アラジンは王国を守るために戦う。
+					</p>
 				</div>
 			</div>
+		</div>
 		<footer><small>&copy; 2501257 副島 明日香 2025</small></footer>
 	</body>
 </html>
